:recycle: Refactored code to improve passport scoring system
- Replaced `CV_PERCENTAGE_SCALE` with `CV_PASSPORT_THRESHOLD_SCALE` for better score calculation
- Enhanced CheckPassport component to handle fetching state and added more hooks for contract interactions
- Adjusted form width in PoolEditForm and

--- a/pkg/subgraph/src/templates/passportScorer.yaml
+++ b/pkg/subgraph/src/templates/passportScorer.yaml
@@ -27,6 +27,10 @@
           handler: handleUserRemoved
         - event: StrategyAdded(indexed address,uint256,bool,address)
           handler: handleStrategyAdded
+        - event: StrategyRemoved(indexed address)
+          handler: handleStrategyRemoved
         - event: StrategyActivated(indexed address)
           handler: handleStrategyActivated
+        - event: ThresholdModified(indexed address,uint256)
+          handler: handleThresholdModified
       file: ./src/mappings/passport-scorer.ts
