:recycle: Refactored error messages and improved code readability
- Updated error messages to prompt users to report bugs
- Simplified contract write operations by directly passing arguments instead of creating a separate data object
- Replaced specific variable names with more generic ones for better code readability
- Added additional checks and error handling in the passport submission process
- Adjusted score calculation methods according to the updated CV_PASSPORT_THRESHOLD_SCALE constant

--- a/pkg/subgraph/src/templates/passportScorer.yaml
+++ b/pkg/subgraph/src/templates/passportScorer.yaml
@@ -21,7 +21,7 @@
       eventHandlers:
         - event: Initialized(uint8)
           handler: handleInitialized
-        - event: UserScoreAdded(indexed address,uint256,uint256)
+        - event: UserScoreAdded(indexed address,uint256)
           handler: handleUserScoreAdded
         - event: UserRemoved(indexed address)
           handler: handleUserRemoved
