--- a/turbo.json
+++ b/turbo.json
@@ -52,14 +52,14 @@
         "NEXT_PUBLIC_SUBGRAPH_URL_OPTIMISM",
         "NEXT_PUBLIC_SUBGRAPH_URL_MATIC",
         "NEXT_PUBLIC_SUBGRAPH_URL_GNOSIS",
-        "NEXT_PUBLIC_RPC_URL_ARB_TESTNET",
-        "NEXT_PUBLIC_RPC_URL_OP_TESTNET",
-        "NEXT_PUBLIC_RPC_URL_ETH_TESTNET",
-        "NEXT_PUBLIC_RPC_URL_ARBITRUM",
-        "NEXT_PUBLIC_RPC_URL_ETHEREUM",
-        "NEXT_PUBLIC_RPC_URL_OPTIMISM",
-        "NEXT_PUBLIC_RPC_URL_GNOSIS",
-        "NEXT_PUBLIC_RPC_URL_MATIC",
+        "RPC_URL_ARB_TESTNET",
+        "RPC_URL_OP_TESTNET",
+        "RPC_URL_ETH_TESTNET",
+        "RPC_URL_ARBITRUM",
+        "RPC_URL_ETHEREUM",
+        "RPC_URL_OPTIMISM",
+        "RPC_URL_GNOSIS",
+        "RPC_URL_MATIC",
         "CRON_SECRET"
       ]
     },
