--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: gnosis
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 100
+        data: 421614
     source:
-      address: "0x08df82f74d1f56f650e98da2dd4240f1a31711bc"
+      address: "0x7a603877488db46c0f6b40c2c770becfd7a65593"
       abi: RegistryFactoryV0_0
-      startBlock: 36032424
+      startBlock: 73590780
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: gnosis
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 100
+        data: 421614
     source:
-      address: "0xd7b72fcb6a4e2857685175f609d1498ff5392e46"
+      address: "0xfF53a163e43EccC00d8FdE7acA24aa9FA4da7356"
       abi: PassportScorer
-      startBlock: 36032424
+      startBlock: 73590780
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -78,7 +78,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: gnosis
+    network: arbitrum-sepolia
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -140,7 +140,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: gnosis
+    network: arbitrum-sepolia
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -199,7 +199,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: gnosis
+    network: arbitrum-sepolia
     source:
       abi: CollateralVault
     mapping:
