:lock: Added GitHub token to environment variables
- Introduced a new environment variable, GITHUB_TOKEN, in the AI code review workflow
- This token is used for authentication during the 'Get Gemini step log' job

--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -106,6 +106,8 @@ jobs:
       - name: Get Gemini step log
         if: steps.review.outcome == 'failure'
         id: get-gemini-log
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           echo "gemini_log<<EOF" >> $GITHUB_OUTPUT
           gh run view ${{ steps.review.outputs.run_id }} --log >> $GITHUB_OUTPUT
