--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -102,12 +102,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
+          gemini_log=$(gh run view ${{ github.run_id }} --log)
           echo "gemini_log<<EOF" >> $GITHUB_OUTPUT
-          gh run view ${{ steps.review.outputs.run_id }} --log >> $GITHUB_OUTPUT
+          echo "$gemini_log" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Add comment with log
-        if: steps.review.outcome == 'failure'
+        if: steps.review.outcome == 'failure' && steps.get-gemini-log.outcome == 'success'
         uses: actions/github-script@v6
         with:
           script: |
