:repeat: Retry logic added to GitHub workflow
- Introduced a retry mechanism in the GitHub workflow for fetching logs
- The system will now attempt to fetch logs up to 5 times with a delay of 10 seconds between each try
- If all attempts fail, an error message is displayed and the process exits with status code 1
- Adjusted comment addition logic to only include Gemini log if the previous step was successful

--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -102,23 +102,44 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gemini_log=$(gh run view ${{ github.run_id }} --log)
-          echo "gemini_log<<EOF" >> $GITHUB_OUTPUT
-          echo "$gemini_log" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          max_retries=5
+          delay=10
+          attempt=1
+          while [[ $attempt -le $max_retries ]]; do
+            gemini_log=$(gh run view ${{ github.run_id }} --log || echo "in-progress")
+            if [[ "$gemini_log" != "in-progress" ]]; then
+              echo "gemini_log<<EOF" >> $GITHUB_OUTPUT
+              echo "$gemini_log" >> $GITHUB_OUTPUT
+              echo "EOF" >> $GITHUB_OUTPUT
+              exit 0
+            else
+              echo "Run is still in progress. Retrying in $delay seconds... (Attempt $attempt/$max_retries)"
+              sleep $delay
+              attempt=$((attempt + 1))
+            fi
+          done
+          echo "Failed to retrieve logs after $max_retries attempts."
+          exit 1
 
       - name: Add comment with log
-        if: steps.review.outcome == 'failure' && steps.get-gemini-log.outcome == 'success'
+        if: steps.review.outcome == 'failure'
         uses: actions/github-script@v6
         with:
           script: |
             const runUrl = `https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}`;
-            const geminiLog = `${{ steps.get-gemini-log.outputs.gemini_log }}`;
+            let commentBody = `Gemini Code Review encountered an error. [View the run here](${runUrl}).\n\n`;
+
+            // Only insert the Gemini log if the previous step succeeded
+            if ('get-gemini-log' in steps && steps['get-gemini-log'].outcome == 'success') {
+              const geminiLog = `${{ steps.get-gemini-log.outputs.gemini_log }}`;
+              commentBody += `Here is the step log from the review step:\n\n\`\`\`\n${geminiLog}\n\`\`\`\n`;
+            }
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Gemini Code Review encountered an error. [View the run here](${runUrl}).\n\nHere is the step log from the review step:\n\n\`\`\`\n${geminiLog}\n\`\`\``
+              body: commentBody
             });
 
       - name: Add thumbs down reaction if something went wrong
