:bug: Fixed incorrect variable reference in GitHub workflow
- Corrected the variable reference in the URL string for AI code review workflow
- This change ensures that the correct job container ID is used when generating the run URL

--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -101,7 +101,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const runUrl = `https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ github.job.container.id }}`;
+            const runUrl = `https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ job.container.id }}`;
             const commentBody = `Gemini Code Review encountered an error. [View the run here](${runUrl}).\n\nLogs from the **Code Review by Gemini AI** step may still contains some review before failing.`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
