--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -96,13 +96,21 @@ jobs:
             When a line start with a minus (`-`) it means that the line was removed, when it starts with plus (`+`) it means that the line was added.
           log_level: "DEBUG"
 
+      - name: Get current job ID
+        id: get-job-id
+        run: |
+          jobs=$(gh run view ${{ github.run_id }} --json jobs --jq '.jobs[] | select(.name=="${{ github.job }}") | .id')
+          echo "job_id=$jobs" >> $GITHUB_OUTPUT
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Add comment with log
         if: steps.review.outcome == 'failure'
         uses: actions/github-script@v6
         with:
           script: |
-            const runUrl = `https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ job.container.id }}`;
-            const commentBody = `Gemini Code Review encountered an error. [View the run here](${runUrl}).\n\nLogs from the **Code Review by Gemini AI** step may still contains some review before failing.`;
+            const runUrl = `https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ steps.get-job-id.outputs.job_id }}`;
+            const commentBody = `Gemini Code Review encountered an error. [View the run here](${runUrl}).\n\nExpand **Code Review by Gemini AI** step as it may still contains some review before failing.`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
