:recycle: Refactored job ID retrieval in workflow
- Simplified the process of getting the current job ID in GitHub Actions workflow
- Replaced a two-step process with a single command to retrieve and store the job ID
- This change improves readability and maintainability of the code

--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -99,8 +99,8 @@ jobs:
       - name: Get current job ID
         id: get-job-id
         run: |
-          jobs=$(gh run view ${{ github.run_id }} --json jobs --jq '.jobs[] | select(.name=="${{ github.job }}") | .id')
-          echo "job_id=$jobs" >> $GITHUB_OUTPUT
+          job_id=$(gh run view ${{ github.run_id }} --json jobs --jq '.jobs[] | select(.name=="'"${{ github.job }}"'") | .id')
+          echo "job_id=$job_id" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
