--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@sentry/nextjs": "^8",
     "@tanstack/react-query": "^5.17.19",
+    "@tenderly/sdk": "^0.3.0",
     "@thirdweb-dev/chain-icons": "^1.0.5",
     "@uiw/react-markdown-editor": "^6.1.2",
     "@urql/next": "^1.1.0",
