--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -19,11 +19,11 @@
     "deploy:local": "pnpm manifest:local && graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
     "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
     "deploy:ethsep": "pnpm manifest:ethsep && graph deploy --studio gv2-ethsepolia",
-    "deploy:arbitrum": "pnpm manifest:arbitrum && graph deploy --studio gv2-arbitrum",
-    "deploy:optimism": "pnpm manifest:optimism && graph deploy --studio gv2-optimism",
-    "deploy:matic": "pnpm manifest:matic && graph deploy --studio gv2-matic",
-    "deploy:gnosis": "pnpm manifest:gnosis && graph deploy --studio gv2-gnosis",
-    "deploy:prod": "export SUB_PROD_VERSION=0.1.0 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION",
+    "deploy:arbitrum": "pnpm manifest:arbitrum && graph deploy --studio gardens-v2---arbitrum",
+    "deploy:optimism": "pnpm manifest:optimism && graph deploy --studio gardens-v2---optimism",
+    "deploy:matic": "pnpm manifest:matic && graph deploy --studio gardens-v2---polygon",
+    "deploy:gnosis": "pnpm manifest:gnosis && graph deploy --studio gardens-v2---gnosis",
+    "deploy:prod": "export SUB_PROD_VERSION=0.1.4 && pnpm deploy:arbitrum -l $SUB_PROD_VERSION && pnpm deploy:optimism -l $SUB_PROD_VERSION && pnpm deploy:matic -l $SUB_PROD_VERSION && pnpm deploy:gnosis -l $SUB_PROD_VERSION",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
     "local": "pnpm create-local && pnpm build && pnpm deploy:local",
