--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -17,7 +17,7 @@
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
     "remove-local": "graph remove --node http://localhost:8020/ kamikazebr/gv2",
     "deploy:local": "pnpm manifest:local && graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
-    "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
+    "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gardens-v2---arbitrum-sepolia",
     "deploy:ethsep": "pnpm manifest:ethsep && graph deploy --studio gv2-ethsepolia",
     "deploy:arbitrum": "pnpm manifest:arbitrum && graph deploy --studio gardens-v2---arbitrum",
     "deploy:optimism": "pnpm manifest:optimism && graph deploy --studio gardens-v2---optimism",
