--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -44,8 +44,8 @@ templates:
           handler: handlePoolCreated
         - event: MemberKicked(address,address,uint256)
           handler: handleMemberKicked
-        # - event: CommunityFeeUpdated(uint256)
-        #   handler: handleCommunityFeeUpdated
+        - event: CommunityFeeUpdated(uint256)
+          handler: handleCommunityFeeUpdated
         # - event: ProtocolFeeUpdated(uint256)
         #   handler: handleProtocolFeeUpdated
         - event: StrategyAdded(address)
@@ -61,11 +61,19 @@ templates:
         - event: MemberPowerIncreased(address,uint256)
           handler: handleMemberPowerIncreased
         - event: BasisStakedAmountUpdated(uint256)
-          andler: handleBasisStakedAmountUpdated
+          handler: handleBasisStakedAmountUpdated
         - event: CouncilSafeUpdated(address)
           handler: handleCouncilSafeUpdated
         - event: CouncilSafeChangeStarted(address,address)
           handler: handleCouncilSafeChangeStarted
+        - event: KickEnabledUpdated(bool)
+          handler: handleKickEnabledUpdated
+        - event: CovenantIpfsHashUpdated(string)
+          handler: handleCovenantIpfsHashUpdated
+        - event: CommunityNameUpdated(string)
+          handler: handleCommunityNameUpdated
+        - event: FeeReceiverChanged(address)
+          handler: handleFeeReceiverChanged 
       file: ./src/mappings/registry-community.ts
 
   - kind: ethereum/contract
