--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: optimism
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 10
+        data: 421614
     source:
-      address: "0x1fac47cf25f1ca9f20ba366099d26b28401f5715"
+      address: "0x7a603877488db46c0f6b40c2c770becfd7a65593"
       abi: RegistryFactoryV0_0
-      startBlock: 36032423
+      startBlock: 73590780
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: optimism
+    network: arbitrum-sepolia
     context:
       chainId: 
         type: Int
-        data: 10
+        data: 421614
     source:
-      address: "0xc93830dd463516ed5f28f6cd4f837173b87ff389"
+      address: "0xfF53a163e43EccC00d8FdE7acA24aa9FA4da7356"
       abi: PassportScorer
-      startBlock: 36032423
+      startBlock: 73590780
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -78,7 +78,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: optimism
+    network: arbitrum-sepolia
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -112,8 +112,8 @@ templates:
           handler: handlePoolCreated
         - event: MemberKicked(address,address,uint256)
           handler: handleMemberKicked
-        # - event: CommunityFeeUpdated(uint256)
-        #   handler: handleCommunityFeeUpdated
+        - event: CommunityFeeUpdated(uint256)
+          handler: handleCommunityFeeUpdated
         # - event: ProtocolFeeUpdated(uint256)
         #   handler: handleProtocolFeeUpdated
         - event: StrategyAdded(address)
@@ -128,19 +128,25 @@ templates:
           handler: handleMemberPowerDecreased
         - event: MemberPowerIncreased(address,uint256)
           handler: handleMemberPowerIncreased
-        # - event: BasisStakedAmountSet(uint256)
-          # handler: handleBasisStakedAmountSet
-        # - event: CouncilSafeSet(address)
-        #   handler: handleCouncilSafeSet
-        # - event: CouncilSafeChangeStarted(address,address)
-        #   handler: handleCouncilSafeChangeStarted
-        # - event: AlloSet(address)
-        #   handler: handleAlloSet
+        - event: BasisStakedAmountUpdated(uint256)
+          handler: handleBasisStakedAmountUpdated
+        - event: CouncilSafeUpdated(address)
+          handler: handleCouncilSafeUpdated
+        - event: CouncilSafeChangeStarted(address,address)
+          handler: handleCouncilSafeChangeStarted
+        - event: KickEnabledUpdated(bool)
+          handler: handleKickEnabledUpdated
+        - event: CovenantIpfsHashUpdated(string)
+          handler: handleCovenantIpfsHashUpdated
+        - event: CommunityNameUpdated(string)
+          handler: handleCommunityNameUpdated
+        - event: FeeReceiverChanged(address)
+          handler: handleFeeReceiverChanged 
       file: ./src/mappings/registry-community.ts
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: optimism
+    network: arbitrum-sepolia
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -199,7 +205,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: optimism
+    network: arbitrum-sepolia
     source:
       abi: CollateralVault
     mapping:
