--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: arbitrum-sepolia
+    network: localhost
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 1337
     source:
-      address: "0x2689b1e4afcbfb393d9727fba2ab52930035ee85"
+      address: "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
       abi: RegistryFactoryV0_0
-      startBlock: 95965509
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: arbitrum-sepolia
+    network: localhost
     context:
       chainId: 
         type: Int
-        data: 421614
+        data: 1337
     source:
-      address: "0x32Fe66622a4D4607241AC723e23Fef487ACDABb5"
+      address: "0x0165878a594ca255338adfa4d48449f69242eb8f"
       abi: PassportScorer
-      startBlock: 95965509
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -78,7 +78,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: arbitrum-sepolia
+    network: localhost
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -143,12 +143,14 @@ templates:
         - event: CommunityNameUpdated(string)
           handler: handleCommunityNameUpdated
         - event: FeeReceiverChanged(address)
-          handler: handleFeeReceiverChanged 
+          handler: handleFeeReceiverChanged
+        - event: PoolRejected(address)
+          handler: handlePoolRejected
       file: ./src/mappings/registry-community.ts
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: arbitrum-sepolia
+    network: localhost
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -207,7 +209,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: arbitrum-sepolia
+    network: localhost
     source:
       abi: CollateralVault
     mapping:
