--- a/foundry.toml
+++ b/foundry.toml
@@ -14,7 +14,7 @@ extra_output = ["storageLayout"]
 optimizer = true
 optimizer-runs = 0
 # prompt_timeout = 120
-fs_permissions = [{ access = "read", path = "./"}]
+fs_permissions = [{ access = "read-write", path = "./"}]
 # fs_permissions = []
 # auto_detect_remappings = true # recursive auto-detection of remappings
 # remappings = ["ds-test/=lib/forge-std/lib/ds-test/src/",
