--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactoryV0_0
-    network: localhost
+    network: gnosis
     context:
       chainId: 
         type: Int
-        data: 1337
+        data: 100
     source:
-      address: "0xb7f8bc63bbcad18155201308c8f3540b07f84f5e"
+      address: "0x08df82f74d1f56f650e98da2dd4240f1a31711bc"
       abi: RegistryFactoryV0_0
-      startBlock: 0
+      startBlock: 36032423
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -40,15 +40,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: localhost
+    network: gnosis
     context:
       chainId: 
         type: Int
-        data: 1337
+        data: 100
     source:
-      address: "0x0165878a594ca255338adfa4d48449f69242eb8f"
+      address: "0x20965C5C8a021ac6fFeD5dE7A402f7CEaC3b0A82"
       abi: PassportScorer
-      startBlock: 0
+      startBlock: 36032423
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -78,7 +78,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunityV0_0
-    network: localhost
+    network: gnosis
     source:
       abi: RegistryCommunityV0_0
     mapping:
@@ -150,7 +150,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategyV0_0
-    network: localhost
+    network: gnosis
     source:
       abi: CVStrategyV0_0
     mapping:
@@ -209,7 +209,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: localhost
+    network: gnosis
     source:
       abi: CollateralVault
     mapping:
